2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.h:
	* runtime.cpp|h: Add LOG_OOB support.

	* pal/pal.cpp:
	* pal/gtk/pal-gtk.cpp:
	* pal/gtk/install-dialog.cpp: Add oob debug spew.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (MultiScaleImage::ctor): Init n_downloading
	to 0.
	(CanDownloadMoreTiles): Check n_downloading < MAX_DOWNLOADERS
	rather than downloaders->len < MAX_DOWNLOADERS because the
	downloaders array can contain unused downloaders.
	(UpdateIsDownloading): If n_downloaders > 0, then set the property
	to true, else false.
	(DownloadTile): Increment n_downloading.
	(TileFailed): Decrement n_downloading if we give up.
	(TileOpened): Decrement n_downloading.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (HandleDzParsed): Iterate over the
	DeepZoomImageTileSource's SubImages using the new accessor
	methods. Beats using g_list_get_nth_data() for each item.

	* deepzoomimagetilesource.cpp: Use GPtrArrays for the
	display_rects and subimages for performance reasons and also
	because it's simpler.
	(GetSubImage): New helper method to get a SubImage at a particular
	index.
	(DZParserInfo::dtor): Free display_rects and subimages.
	(DeepZoomImageTileSource): Free display_rects and subimages.
	(Abort): Delete the DZParserInfo.
	(DownloaderComplete): Same.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp: Reworked the BitmapImageContext code to not
	use a GList to make things simpler.

2010-06-23  Jackson Harper  <jackson@ximian.com>

	* namescope.h: Make a managed class for namescopes.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (RenderCollection): Use some temp vars to
	help make the code more readable as well as avoiding duplicate
	calculations.
	(OnSourcePropertyChanged): More use of temp vars.

2010-06-23  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* template.h:
	* control.cpp:
	* template.cpp:
	* frameworkelement.h: